refactor(home.html): href 변경

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="bg-slate-50 px-4 py-3 mt-2">
-                    <a th:href="@{/api/players/{id}(id=${player.id})}" class="text-emerald-600 hover:text-emerald-700 transition duration-300 flex items-center justify-center">
+                    <a th:href="@{/players/{id}(id=${player.id})}" class="text-emerald-600 hover:text-emerald-700 transition duration-300 flex items-center justify-center">
                         View Full Profile
                         <i class="icon icon-arrow-right ml-2"></i>
                     </a>
